<resources>
    <string name="app_name">Control de cafetin UES</string>
    <string name="title_activity_tipo_pago">TipoPagoActivity</string>
    <string name="title_activity_detalle_pedido">DetallePedidoActivity</string>
    <string name="title_activity_producto">ProductoActivity</string>
    <string name="title_activity_tipo_pago_insertar">TipoPagoInsertarActivity</string>
    <string name="title_activity_tipo_pago_eliminar">TipoPagoEliminarActivity</string>
    <string name="title_activity_tipo_pago_consultar">TipoPagoConsultarActivity</string>
    <string name="title_activity_tipo_pago_actualizar">TipoPagoActualizarActivity</string>
    <string name="title_activity_detalle_pedido_insertar">DetallePedidoInsertarActivity</string>
    <string name="title_activity_detalle_pedido_eliminar">DetallePedidoEliminarActivity</string>
    <string name="title_activity_detalle_pedido_consultar">DetallePedidoConsultarActivity</string>
    <string name="title_activity_detalle_pedido_actualizar">DetallePedidoActualizarActivity</string>
    <string name="title_activity_producto_insertar">ProductoInsertarActivity</string>
    <string name="title_activity_producto_eliminar">ProductoEliminarActivity</string>
    <string name="title_activity_producto_consultar">ProductoConsultarActivity</string>
    <string name="title_activity_producto_actualizar">ProductoActualizarActivity</string>
    <string name="TipoPago">Función a Ejecutar TipoPago</string>
    <string name="DetallePedido">Función a Ejecutar DetallePedido</string>
    <string name="Producto">Función a Ejecutar Producto</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="idTipoPago">id TipoPago</string>
    <string name="tipopago">tipo pago</string>
    <string name="opciones">opciones</string>
    <string name="insertar">insertar</string>
    <string name="limpiar">limpiar</string>
    <string name="consultar">consultar</string>
    <string name="tipoPago">tipo Pago</string>
    <string name="actualizar">actualizar</string>
    <string name="eliminar">eliminar</string>
    <string name="idProducto">id Producto</string>
    <string name="idDetallePedido">id Detalle de pedido</string>
    <string name="cantidad">cantidad</string>
    <string name="EstadoPedido">Estado de Pedido</string>
    <string name="NombreProducto">Nombre del Producto</string>
    <string name="idLocal">id Local</string>
    <string name="idProveedor">id Proveedor</string>
    <string name="Hora_Id">Id:</string>
    <string name="Hora_Dia">Dia:</string>
    <string name="Hora_Apertura">Apertura:</string>
    <string name="Hora_Cierre">Cierre:</string>
    <string name="Guardar">Guardar</string>
    <string name="Consultar">Consultar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="title_usuario_crear">Crear Usuario</string>
    <string name="title_usuario_eliminar">Eliminar Usuario</string>
    <string name="title_usuario_consultar">Consultar Usuario</string>
    <string name="title_usuario_actualizar">Actualizar Usuario</string>
    <string name="title_preferencial_crear">Crear Preferencial</string>
    <string name="title_preferencial_actualizar">Actualizar Preferencial</string>
    <string name="title_preferencial_eliminar">Eliminar Preferencial</string>
    <string name="title_proveedor_create">Crear Proveedor</string>
    <string name="title_proveedor_update">Actualizar Proveedor</string>
    <string name="title_proveedor_eliminar">Eliminar Proveedor</string>
    <string name="title_preferencial_consultar">Consultar Prefrencial</string>
    <string name="title_proveedor_consultar">Consultar Proveedor</string>
    <string-array name="estados_usuario">
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>
    <string-array name="estados_pedido">
        <item>Recibido</item>
        <item>Cancelado</item>
    </string-array>
</resources>