<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idProducto"/>
        <EditText
            android:id="@+id/editCodmateria"
            android:inputType="text"
             />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/NombreProducto" />
        <EditText
            android:id="@+id/editNombreProducto"
            android:inputType="text"
             />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idLocal" />
        <EditText
            android:id="@+id/editidLocal"
            android:inputType="text"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idProveedor" />
        <EditText
            android:id="@+id/editidProveedor"
            android:inputType="text"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarProducto"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>