<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idTipoPago"/>
        <EditText
            android:id="@+id/editidTipoPago"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipopago" />
        <EditText
            android:id="@+id/edittipoPago"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarTipoPago"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>