<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>

        <TextView android:text="@string/idTipoPago" />

        <EditText
            android:id="@+id/editidTipoPago"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipoPago" />
        <EditText
            android:id="@+id/edittipoPago"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:onClick="actualizarTipoPago"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>