<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idDetallePedido"/>

    <EditText
        android:id="@+id/editidDetallePedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:onClick="consultarDetallePedido"/>
        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipoPago" />
    <EditText
        android:id="@+id/editidTipoPago"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled ="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:longClickable="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idProducto" />
    <EditText
        android:id="@+id/editidProducto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled ="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:longClickable="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad" />
    <EditText
        android:id="@+id/editcantidad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled ="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:longClickable="false" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EstadoPedido"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/editEstadoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:longClickable="false"
        android:layout_margin="12dp"/>

</LinearLayout>