<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idProducto" />

    <EditText
        android:id="@+id/editidProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="consultarProducto"
            android:text="@string/consultar" />

        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NombreProducto" />

    <EditText
        android:id="@+id/editNombreProducto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:longClickable="false" />

  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idLocal" />

   <EditText
        android:id="@+id/editidLocal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:longClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idProveedor" />

    <EditText
        android:id="@+id/editidProveedor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:longClickable="false" />


</LinearLayout>