<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="Id Pedido Asignado"/>
        <EditText
            android:id="@+id/editIdPedidoAsignado"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="Id Pedido" />
        <EditText
            android:id="@+id/editIdPedido"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="Id Repartidor" />
        <EditText
            android:id="@+id/editIdRepartidor"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarAsignadoPedido"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>