<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="Id Categoria"/>
        <EditText
            android:id="@+id/editidCategoria"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="Id Producto" />
        <EditText
            android:id="@+id/editidProducto"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="Nombre Categoria" />
        <EditText
            android:id="@+id/editNombreCategoria"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="Descripcion Categoria" />
        <EditText
            android:id="@+id/editDescripcionCategoria"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarCategoria"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>