<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingTop="4dip"
    >

    <!--<TableRow >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idTipoPago"/>
        <EditText
            android:id="@+id/editidTipoPago"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
           />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idProducto"/>
        <EditText
            android:id="@+id/editidProducto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </TableRow>-->

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idDetallePedido"/>
        <EditText
            android:id="@+id/editidDetallePedido"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/eliminar"
            android:onClick="eliminarDetallePedido"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/limpiar"
            android:onClick="limpiar"/>
    </TableRow>

</TableLayout>
