<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="Id Pedido"/>
        <EditText
            android:id="@+id/editIdPedido"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="Id Local" />
        <EditText
            android:id="@+id/editIdLocal"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="Id Combo" />
        <EditText
            android:id="@+id/editIdCombo"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="Usuario" />
        <EditText
            android:id="@+id/editIdUsuario"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="Detalle pedido" />
        <EditText
            android:id="@+id/editIdDetallePedido"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="fecha pedido" />
        <EditText
            android:id="@+id/editFechaPedido"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarPedido"
            android:text="@string/actualizar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>